--- a/BtcMarkets/BtcMarkets.Wallet/Views/BtcMarketsPage.xaml
+++ b/BtcMarkets/BtcMarkets.Wallet/Views/BtcMarketsPage.xaml
@@ -2,34 +2,45 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:views="clr-namespace:BtcMarkets.Wallet.Views"
+           
              Title="{Binding Title}"
-             ControlTemplate="{StaticResource ActivityIndicatorTemplate}"
-           Style="{StaticResource DefaultPage}"
+              xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core" 
+             ios:Page.UseSafeArea="true" 
+             Style="{StaticResource DefaultPage}"
+             x:Name="BtcPage"
              x:Class="BtcMarkets.Wallet.Views.BtcMarketsPage">
     <Shell.TitleView>
+        <views:AccountHoldingsView BindingContext="{Binding BindingContext,Source={x:Reference BtcPage}}" >
 
-        <StackLayout Orientation="Horizontal">
-            <StackLayout HeightRequest="40" HorizontalOptions="FillAndExpand">
-                <Frame   HasShadow="False"  Padding="1" CornerRadius="5"  BorderColor="{DynamicResource ReverseBackgroundColor}" BackgroundColor="{DynamicResource DefaultBackgroundColor}">
+        </views:AccountHoldingsView>
+    </Shell.TitleView>
+    <!--<Shell.TitleView>
 
-
-
-                </Frame>
-
-
+        <StackLayout Orientation="Horizontal" BindingContext="{Binding BindingContext,Source={x:Reference BtcPage}}">
+            <StackLayout  HorizontalOptions="FillAndExpand">
+                <StackLayout.GestureRecognizers>
+                    <TapGestureRecognizer Command="{Binding ChangeHoldingsCommand}"></TapGestureRecognizer>
+                </StackLayout.GestureRecognizers>
+                <Label  HorizontalOptions="CenterAndExpand" HorizontalTextAlignment="Center" VerticalOptions="CenterAndExpand" VerticalTextAlignment="Center">
+                    <Label.FormattedText>
+                        <FormattedString>
+                            <Span Text="{Binding TotalHoldings}" Style="{StaticResource LargeDefaultText}"></Span>
+                        </FormattedString>
+                    </Label.FormattedText>
+                </Label>
             </StackLayout>
-            <StackLayout Grid.Row="0" Grid.Column="1" Orientation="Horizontal">
+            <StackLayout  Orientation="Horizontal">
                 <Image Source="{Binding Converter={StaticResource FontIconImage},ConverterParameter=settings}"></Image>
                 <Image Source="{Binding Converter={StaticResource FontIconImage},ConverterParameter=refresh}">
                     <Image.GestureRecognizers>
-                        <!--<TapGestureRecognizer Command="{Binding BindingContext.RefreshCommand, Source={x:Reference TradeOrdersPage}}"></TapGestureRecognizer>-->
+                        <TapGestureRecognizer Command="{Binding BindingContext.RefreshDataCommand, Source={x:Reference BtcPage}}"></TapGestureRecognizer>
                     </Image.GestureRecognizers>
                 </Image>
             </StackLayout>
         </StackLayout>
-    </Shell.TitleView>
+    </Shell.TitleView>-->
     <ContentPage.Content>
-        <views:MarketsView Markets="{Binding BtcMarkets}">
+        <views:MarketsView Grid.Row="1" Grid.Column="0" Markets="{Binding BtcMarkets}">
 
         </views:MarketsView>
     </ContentPage.Content>
