--- a/BtcMarkets/BtcMarkets.Wallet/Views/HomePage.xaml
+++ b/BtcMarkets/BtcMarkets.Wallet/Views/HomePage.xaml
@@ -3,88 +3,227 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:controls="clr-namespace:Refractored.XamForms.PullToRefresh;assembly=Refractored.XamForms.PullToRefresh"
              xmlns:converters="clr-namespace:BtcMarkets.Wallet.Converters"
-           
+             xmlns:effects="clr-namespace:BtcMarkets.Wallet.Effects"
              Title="{Binding Title}"
              Style="{DynamicResource DefaultPage}"
-             ControlTemplate="{DynamicResource ActivityIndicatorTemplate}"
+             x:Name="HomePg"
              x:Class="BtcMarkets.Wallet.Views.HomePage" 
+             Shell.NavBarIsVisible="False"
              >
+   
     <!-- Shell.NavBarIsVisib1le="False"-->
-    <NavigationPage.TitleView>
-        <StackLayout Orientation="Horizontal">
-            <Label Text="{Binding Title}"></Label>
-            <Slider HeightRequest="44" WidthRequest="300" />
+    <Shell.TitleView>
+        <StackLayout Orientation="Horizontal" BindingContext="{Binding BindingContext,Source={x:Reference HomePg}}">
+            <StackLayout  HorizontalOptions="FillAndExpand">
+                <!--<StackLayout.GestureRecognizers>
+                    <TapGestureRecognizer Command="{Binding ChangeHoldingsCommand}"></TapGestureRecognizer>
+                </StackLayout.GestureRecognizers>
+                <Label  HorizontalOptions="CenterAndExpand" HorizontalTextAlignment="Center" VerticalOptions="CenterAndExpand" VerticalTextAlignment="Center">
+                    <Label.FormattedText>
+                        <FormattedString>
+                            <Span Text="{Binding TotalHoldings}" Style="{StaticResource LargeDefaultText}"></Span>
+                        </FormattedString>
+                    </Label.FormattedText>
+                </Label>-->
+            </StackLayout>
+            <StackLayout  Orientation="Horizontal">
+                <Image Source="{Binding Converter={StaticResource FontIconImage},ConverterParameter=settings}"></Image>
+                <Image Source="{Binding Converter={StaticResource FontIconImage},ConverterParameter=refresh}">
+                    <Image.GestureRecognizers>
+                        <TapGestureRecognizer Command="{Binding RefreshCommand}"></TapGestureRecognizer>
+                    </Image.GestureRecognizers>
+                </Image>
+            </StackLayout>
         </StackLayout>
-    </NavigationPage.TitleView>
+    </Shell.TitleView>
 
     <ContentPage.Content>
-       
-        <Grid VerticalOptions="FillAndExpand">
+
+        <!--<Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
             <Grid.Margin>
                 <OnPlatform x:TypeArguments="Thickness">
-                    <On Platform="iOS" Value="20,100,20,0" />
-                    <On Platform="Android" Value="20" />
+                    <On Platform="iOS" Value="10,100,10,50" />
+                    <On Platform="Android" Value="10,10,10,0" />
                 </OnPlatform>
 
             </Grid.Margin>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="350"></RowDefinition>
+                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
-            <controls:PullToRefreshLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"  
-                                          RefreshColor="{DynamicResource PrimaryColor}"  RefreshCommand="{Binding RefreshCommand}" IsRefreshing="{Binding IsRefreshing}"
-                                           Grid.Row="1" Grid.Column="0" IsPullToRefreshEnabled="True" >
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
+            </Grid.ColumnDefinitions>-->
 
-                <ScrollView VerticalOptions="FillAndExpand">
-                    <StackLayout>
-                    <Grid IsVisible="{Binding IsAccountValid, Converter={converters:InverseBoolConverter}}"  VerticalOptions="CenterAndExpand">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto"></RowDefinition>
-                            <RowDefinition Height="Auto"></RowDefinition>
-                        </Grid.RowDefinitions>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*"/>
-                        </Grid.ColumnDefinitions>
+        <StackLayout Spacing="10">
+            <StackLayout.Margin>
+                <OnPlatform x:TypeArguments="Thickness">
+                    <On Platform="iOS" Value="10,100,10,50" />
+                    <On Platform="Android" Value="10,10,10,0" />
+                </OnPlatform>
+            </StackLayout.Margin>
+            <StackLayout  >
 
-                        <StackLayout Grid.Row="0" Grid.Column="0">
-                            <Frame Style="{StaticResource HighlightPanel}">
-                                <StackLayout>
-                                    <Label Text="Bitcoin(BTC)" Style="{StaticResource MediumHightlightText}"></Label>
-                                    <Label Text="{Binding BtcAudCoin.LastPriceString}" Style="{StaticResource MediumHightlightText}"></Label>
+                <Frame CornerRadius="5" Style="{StaticResource HighlightPrimaryPanel}">
+
+                    <StackLayout HorizontalOptions="FillAndExpand" >
+
+                        <StackLayout.GestureRecognizers>
+                            <TapGestureRecognizer Command="{Binding ChangeHoldingsCommand}"></TapGestureRecognizer>
+                        </StackLayout.GestureRecognizers>
+
+                        <Label Text="Total Holdings" Style="{StaticResource SmallDefaultText}"></Label>
+                        <Label Text="{Binding TotalHoldings}" Style="{StaticResource LargeDefaultText}"></Label>
+
+
+                    </StackLayout>
+                </Frame>
+
+
+            </StackLayout>
+            <StackLayout >
+
+                <Frame CornerRadius="5" Style="{StaticResource HighlightPanel}">
+
+                    <StackLayout HorizontalOptions="FillAndExpand" >
+
+                        <Label Text="Bitcoin" Style="{StaticResource SmallDefaultText}"></Label>
+                        <Label  Style="{StaticResource LargeDefaultText}">
+                            <Label.FormattedText>
+                                <FormattedString>
+                                    <Span Text="AUD "></Span>
+                                    <Span Text="{Binding BtcAudCoin.LastPriceWithSymbol}"></Span>
+                                </FormattedString>
+                            </Label.FormattedText>
+                        </Label>
+                    </StackLayout>
+
+                </Frame>
+
+
+            </StackLayout>
+
+            <!--<Grid  Grid.Row="1" Grid.Column="0"  >
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="300" />
+                
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>-->
+            <StackLayout Spacing="5" Padding="0,10,0,10">
+                <Label Text="Account Balances" Style="{StaticResource SmallDefaultText}"></Label>
+                <Grid    Style="{StaticResource ListHeader}" HeightRequest="20">
+
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="45*" />
+                        <ColumnDefinition Width="30*" />
+                        <ColumnDefinition Width="25*" />
+                    </Grid.ColumnDefinitions>
+                    <Label Grid.Column="0" Grid.Row="0"  
+                               Text="Currency" 
+                              Style="{StaticResource SmallHeaderText}"/>
+
+                    <Label Grid.Column="1" Grid.Row="0"  
+                               Text="Holdings" 
+                               Style="{StaticResource SmallHeaderText}"/>
+                    <Label Grid.Column="2" Grid.Row="0"  
+                               Text="Total AUD" 
+                               Style="{StaticResource SmallHeaderText}"/>
+
+                </Grid>
+                <StackLayout  HeightRequest="300">
+
+                    <!--IsPullToRefreshEnabled="True" RefreshCommand="{Binding RefreshCommand}"  IsRefreshing="{Binding IsRefreshing}" SeparatorColor="{StaticResource SeparatorColor}" 
+                     HasUnevenRows="True"-->
+                    <CollectionView x:Name="marketsListView" Style="{StaticResource MarketList}" ItemsSource="{Binding Holdings}"   SelectionMode="Single"    >
+
+                        <CollectionView.EmptyView>
+                            <StackLayout Spacing="20" HorizontalOptions="FillAndExpand" BindingContext="{Binding BindingContext, Source={x:Reference marketsListView}}">
+                                <StackLayout HorizontalOptions="FillAndExpand">
+                                    <Label Text="{Binding NoBalanceMessage}" Style="{StaticResource SmallDefaultText}" ></Label>
                                 </StackLayout>
-                            </Frame>
-                        </StackLayout>
-                        <StackLayout Grid.Row="1" Grid.Column="0" >
-                            <Label Text="{Binding AccountErrorMessage}"></Label>
-                            <Button Text="Settings" Clicked="Button_Clicked"/>
-                        </StackLayout>
-                    </Grid>
-                    <Grid  IsVisible="{Binding IsAccountValid}">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto"></RowDefinition>
-                            <RowDefinition Height="Auto"></RowDefinition>
-                        </Grid.RowDefinitions>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*"/>
-                        </Grid.ColumnDefinitions>
+                                <StackLayout Spacing="20" HorizontalOptions="FillAndExpand" IsVisible="{Binding IsAccountInvalid}">
+                                    <Label Text="{Binding AccountErrorMessage, }" Style="{StaticResource SmallDefaultText}" LineBreakMode="CharacterWrap"></Label>
 
-                        <Frame Grid.Row="0" Grid.Column="0" Style="{StaticResource HighlightPanel}">
-                            <StackLayout HorizontalOptions="FillAndExpand">
+                                    <Button x:Name="BtnSetupApiKeys" Text="{Binding SetupApiKeysText}" Style="{StaticResource DefaultButton}" Clicked="BtnSetupApiKeys_Clicked"></Button>
 
-                                <StackLayout Orientation="Horizontal">
-                                    <Label Text="{Binding BtcAudCoin.Name}"></Label>
-                                    <Label Text="{Binding BtcAudCoin.Currency}"></Label>
-                                    <Label Text="{Binding BtcAudCoin.LastPrice}" FontSize="Large" FontAttributes="Bold" TextColor="White" ></Label>
                                 </StackLayout>
                             </StackLayout>
-                        </Frame>
-                        <StackLayout Grid.Row="1" Grid.Column="0" >
+                        </CollectionView.EmptyView>
+                        <CollectionView.ItemTemplate  >
+                            <DataTemplate>
+                                <!--<ViewCell>-->
+                                <Grid  Style="{StaticResource MarketListTemplate}">
 
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto" />
+                                    </Grid.RowDefinitions>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="45*" />
+                                        <ColumnDefinition Width="30*" />
+                                        <ColumnDefinition Width="25*" />
+                                    </Grid.ColumnDefinitions>
 
-                        </StackLayout>
-                    </Grid>
-                    </StackLayout>
-                </ScrollView>
-            </controls:PullToRefreshLayout>
-        </Grid>
+                                    <StackLayout Grid.Column="0" Grid.Row="0" Orientation="Horizontal"  HorizontalOptions="FillAndExpand" >
+                                        <Frame Style="{StaticResource MarketListFrame}">
+                                            <Image Source="{Binding Image,Converter={StaticResource Base64ToImage}}" WidthRequest="24" HeightRequest="24">
+
+                                                <Image.VerticalOptions>
+                                                    <OnPlatform x:TypeArguments="LayoutOptions">
+                                                        <On Platform="Android" Value="StartAndExpand"/>
+                                                        <On Platform="iOS" Value="StartAndExpand"/>
+                                                    </OnPlatform>
+                                                </Image.VerticalOptions>
+                                            </Image>
+                                        </Frame>
+                                        <StackLayout Spacing="0" Padding="0" HorizontalOptions="FillAndExpand">
+                                            <Label Text="{Binding Currency}"  Style="{StaticResource MarketListInstrumentCode}" HorizontalOptions="FillAndExpand"/>
+                                            <Label  Style="{StaticResource MicroDefaultText}" HorizontalOptions="FillAndExpand">
+                                                <Label.FormattedText>
+                                                    <FormattedString>
+                                                        <Span Text="("></Span>
+                                                        <Span Text="{Binding Name}" Style="{StaticResource MarketListInstrumentName}"></Span>
+                                                        <Span Text=")"></Span>
+                                                    </FormattedString>
+                                                </Label.FormattedText>
+                                            </Label>
+                                        </StackLayout>
+                                    </StackLayout>
+
+                                    <Label Grid.Column="1" Grid.Row="0"  >
+                                        <Label.FormattedText>
+                                            <FormattedString>
+                                                <Span Text="{Binding CurrencySymbol} " Style="{StaticResource MarketListPriceSymbol}"></Span>
+                                                <Span Text="{Binding BalanceString}" Style="{StaticResource MarketListHoldingsValue}"></Span>
+                                            </FormattedString>
+                                        </Label.FormattedText>
+                                    </Label>
+                                    <Label Grid.Column="2" Grid.Row="0"  >
+                                        <Label.FormattedText>
+                                            <FormattedString>
+                                                <Span Text="$" Style="{StaticResource MarketListPriceSymbol}"></Span>
+                                                <Span Text="{Binding TotalAudString}" Style="{StaticResource MarketListHoldingsValue}"></Span>
+                                            </FormattedString>
+                                        </Label.FormattedText>
+                                    </Label>
+                                </Grid>
+                                <!--</ViewCell>-->
+                            </DataTemplate>
+
+                        </CollectionView.ItemTemplate>
+                    </CollectionView>
+                </StackLayout>
+
+            </StackLayout>
+            <!--</Grid>-->
+
+        </StackLayout>
+        <!--</Grid>-->
     </ContentPage.Content>
 </ContentPage>
